# plgi

./: .gitignore  Makefile.in  README  configure.in
examples/: 00-simple-example.pl  01-hello-world.pl  02-hello-world-app.pl  03-box.pl  04-grid.pl  05-table.pl  06-list-box.pl  07-stack.pl  08-header-bar.pl  09-flow-box.pl  10-label.pl  11-entry.pl  12-button.pl  13-toggle-button.pl  14-radio-button.pl  15-link-button.pl  16-spin-button.pl  17-switch.pl  18-progress-bar.pl  19-spinner.pl  20-tree-view.pl  21-cell-renderer-text.pl  22-cell-renderer-toggle.pl  23-cell-renderer-pixbuf.pl  24-cell-renderer-combo.pl  25-cell-renderer-progress.pl  26-cell-renderer-spin.pl  27-combo-box.pl  28-icon-view.pl  29-text-view.pl  30-menus.pl  31-custom-dialog.pl  32-message-dialog.pl  33-file-chooser-dialog.pl  34-clipboard.pl  35-drag-n-drop.pl  36-builder.glade  36-builder.pl  37-toplevel.pl
prolog/: plgi.pl
scripts/: make_pack.sh
src/: Makefile.in  config.h.in  plgi.c  plgi.h  plgi_argument.c  plgi_array.c  plgi_blob.c  plgi_cache.c  plgi_callback.c  plgi_debug.c  plgi_enum.c  plgi_error.c  plgi_flag.c  plgi_gbytes.c  plgi_ghashtable.c  plgi_glist.c  plgi_gstrv.c  plgi_interface.c  plgi_namespace.c  plgi_object.c  plgi_overrides.c  plgi_signal.c  plgi_struct.c  plgi_types.c  plgi_union.c  plgi_version.c
test/: .gitignore  Makefile.in  callback_tests.pl  callbacktests.c  callbacktests.h  marshaller_tests.pl  namespace_tests.pl  namespacetests.c  namespacetests.h  parameter_tests.pl  regress_tests.pl  signal_tests.pl  signaltests.c  signaltests.h  test.pl
(+3 files in other folders)
